# lazy_dice

./: .env.dist  .gitignore  Dockerfile  LICENSE.md  README.md  pyproject.toml
.github/workflows/: black.yml  deploy.yml  mypy.yml
lazy_dice/: __init__.py  die.py  engine.py  formatter.py  main.py  parser.py
