[tool.poetry]
name = "lazy_dice"
version = "0.1.0"
description = ""
authors = ["Seon82"]

[tool.poetry.dependencies]
python = "~3.9"
hikari = "^2.0.0-alpha.105"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.931"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 104
